--- a/src/app/features/lms/ind/components/quotation/components/insurance-history/insurance-history.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/insurance-history/insurance-history.component.html
@@ -151,20 +151,20 @@
               </div>
             </div>
 
+            <!-- Question 2 Section -->
             <div class="mt-0">
               <label class="required">{{ "lms.ind.quotations.proposal_question" | translate }} ?</label>
-              <div style="margin-top: 12px;">
-                <span class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" id="male"
-                      formControlName="question2" value="Y"/>
-                  <label class="form-check-label" for="male">{{ "lms.ind.quotations.yes" | translate }}</label>
-                </span>
-                <span class="form-check form-check-inline">
-                  <input class="form-check-input" type="radio" id="female"
-                      formControlName="question2" value="N" (click)="selectSecondQuestion()"/>
-                  <label class="form-check-label" for="female">{{ "lms.ind.quotations.no" | translate }}</label>
-                </span>
-              </div>
+              <div></div>
+              <span class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" id="male"
+                    formControlName="question2" value="Y"/>
+                <label class="form-check-label" for="male">{{ "lms.ind.quotations.yes" | translate }}</label>
+              </span>
+              <span class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" id="female"
+                    formControlName="question2" value="N" (click)="selectSecondQuestion()"/>
+                <label class="form-check-label" for="female">{{ "lms.ind.quotations.no" | translate }}</label>
+              </span>
 
               <div>
                 <div class="text-black" *ngIf="getValue('question2') === 'Y'">
@@ -173,7 +173,7 @@
                       <div class="d-flex justify-content-between" style="padding: 0 0 0 0rem">
                         <div></div>
                         <div>
-                          <div (click)="addEmptyPolicyList(policyListTwo)" class="b-r d-flex justify-content-center align-content-center">
+                          <div (click)="openAddPolicyTwoModal()" class="b-r d-flex justify-content-center align-content-center">
                             <i class="fa-solid fa-plus"></i>
                           </div>
                         </div>
@@ -192,52 +192,21 @@
                               </tr>
                             </thead>
                             <tbody>
-                              <ng-container *ngFor="let row of policyListTwo; let i = index">
-                                <tr [formGroup]="insuranceHistoryFormTwo" *ngIf="row['isEdit'] === true">
-                                  <td><input formControlName="policy_no" type="text" class="form-control" required /></td>
-                                  <td><input formControlName="provider" type="text" class="form-control" required /></td>
-                                  <td><input formControlName="premium" type="number" class="form-control"/></td>
-                                  <td><input formControlName="sum_assured" type="number" class="form-control"/></td>
-                                  <td>
-                                    <select class="form-select" formControlName="cover_status">
-                                      <option style="font-size: 11px" value="" disabled selected>{{ "lms.ind.quotations.status" | translate }}</option>
-                                      <ng-container *ngFor="let type of coverStatusTypeListTwo">
-                                        <option [value]="type['name']">
-                                            {{ type["value"] | titlecase }}
-                                        </option>
-                                      </ng-container>
-                                    </select>
-                                  </td>
-                                  <td class="d-flex justify-content-between py-2">
-                                    <div (click)="addResponseTwo(i)" class="mx-2">
-                                      <i class="fa-solid fa-check text-success"></i>
-                                    </div>
-                                    <div (click)="cancelPolicyListTwo(i)" class="mx-2">
-                                      <i class="fa-solid fa-x text-danger"></i>
-                                    </div>
-                                  </td>
-                                </tr>
-                                <tr *ngIf="row['isEdit'] === false">
-                                  <td>{{ row["policy_no"] }}</td>
-                                  <td>{{ row["provider"] }}</td>
-                                  <td>{{ row["premium"] }}</td>
-                                  <td>{{ row["sum_assured"] }}</td>
-                                  <td>{{ filterCoverStatusType (
-                                         row["cover_status"]
-                                      ) }}
-                                  </td>
-                                  <td class="d-flex justify-content-between py-2">
-                                    <div (click)="editPolicyTwo(i)" class="mx-2">
-                                      <i class="fas fa-edit text-success"></i>
-                                      <!-- Edit Icon -->
-                                    </div>
-                                    <div (click)="deletepolicyListTwo(i)" class="mx-2">
-                                      <i class="fas fa-trash-alt text-danger"></i>
-                                      <!-- Remove Icon -->
-                                    </div>
-                                  </td>
-                                </tr>
-                              </ng-container>
+                              <tr *ngFor="let row of policyListTwo; let i = index">
+                                <td>{{ row.provider }}</td>
+                                <td>{{ row.policy_no }}</td>
+                                <td>{{ row.premium }}</td>
+                                <td>{{ row.sum_assured }}</td>
+                                <td>{{ filterCoverStatusType(row.cover_status) }}</td>
+                                <td class="d-flex justify-content-between py-2">
+                                  <div (click)="openEditPolicyModalTwo(i)" class="mx-2">
+                                    <i class="fas fa-edit text-success"></i>
+                                  </div>
+                                  <div (click)="deletepolicyListTwo(i)" class="mx-2">
+                                    <i class="fas fa-trash-alt text-danger"></i>
+                                  </div>
+                                </td>
+                              </tr>
                             </tbody>
                           </table>
 
@@ -272,5 +241,68 @@
       style="padding: 0.6em">
         {{ "lms.ind.quotations.next" | translate }} &nbsp;&nbsp;
     </button>
+  </div>
+</div>
+
+<!-- Proposal Question Modal -->
+<div class="modal fade"
+    tabindex="-1"
+    id="policyListTwoModal"
+    [ngClass]="{ show: showPolicyTwoModal }"
+    [style.display]="showPolicyTwoModal ? 'block' : 'none'"
+    aria-labelledby="policyListTwoModal"
+    aria-hidden="!showPolicyTwoModal">
+  <div class="modal-dialog modal-custom">
+    <div class="modal-content p-4">
+      <div class="modal-header">
+        <h5 class="modal-title">{{ editingPolicyTwo ? 'Edit Policy Details' : 'Add Policy Details' }}</h5>
+        <button type="button" class="btn-close" aria-label="Close" (click)="closePolicyModalTwo()"></button>
+      </div>
+      <div class="modal-body">
+
+        <form [formGroup]="insuranceHistoryFormTwo">
+
+          <div class="row g-3">
+
+            <div class="col-md-6">
+              <label for="provider" class="form-label">{{ "lms.ind.quotations.insurance_company" | translate }}</label>
+              <input formControlName="provider" type="text" class="form-control" id="provider" />
+            </div>
+
+            <div class="col-md-6">
+              <label for="policy_no" class="form-label">{{ "lms.ind.quotations.policy_no" | translate }}</label>
+              <input formControlName="policy_no" type="text" class="form-control" id="policy_no" />
+            </div>
+
+            <div class="col-md-6">
+              <label for="premium" class="form-label">{{ "lms.ind.quotations.annual_premium" | translate }}</label>
+              <input formControlName="premium" type="number" class="form-control" id="premium" />
+            </div>
+
+            <div class="col-md-6">
+              <label for="sum_assured" class="form-label">{{ "lms.ind.quotations.sum_assured" | translate }}</label>
+              <input formControlName="sum_assured" type="number" class="form-control" id="sum_assured" />
+            </div>
+
+            <div class="col-md-6">
+              <label for="cover_status" class="form-label">{{ "lms.ind.quotations.status" | translate }}</label>
+              <select formControlName="cover_status" class="form-select" id="cover_status">
+                <ng-container *ngFor="let type of coverStatusTypeListTwo">
+                  <option [value]="type['name']">
+                    {{ type['value'] | titlecase }}</option>
+                </ng-container>
+              </select>
+            </div>
+
+          </div>
+
+        </form>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" (click)="closePolicyModalTwo()">Cancel</button>
+        <button type="button" class="btn btn-primary" (click)="savePolicyTwo()">Save</button>
+      </div>
+    </div>
   </div>
 </div>
