--- a/src/app/features/entities/components/lead/new-lead/new-lead.component.html
+++ b/src/app/features/entities/components/lead/new-lead/new-lead.component.html
@@ -522,7 +522,7 @@
                     "
                     class="form-text text-danger"
                     [ngClass]="{
-                      'is-invalid': ['submitted'] && f['date']?.errors
+                      'is-invalid': submitted && f['date']?.errors
                     }"
                   >
                     <div
@@ -723,34 +723,6 @@
                     [style]="{ width: '100%', height: '55%' }"
                     placeholder="Lead Activity"
                   ></p-multiSelect>
-                  <!-- <p-dropdown
-                    [options]="leadActivitiesData"
-                    optionLabel="subject"
-                    optionValue="id"
-                    [style]="{ width: '100%', height: '50%' }"
-                    placeholder="Lead Activity"
-                    formControlName="leadActivity"
-                    id="leadActivity"
-                    [filter]="true"
-                    filterBy="name"
-                    [showClear]="true"
-                    appendTo="body"
-                    class="center-placeholder"
-                    ngDefaultControl
-                    [ngClass]="{
-                      'is-invalid':
-                        f['primaryDetails']['controls']['leadActivity'][
-                          'invalid'
-                        ] &&
-                        (f['primaryDetails']['controls']['leadActivity'][
-                          'dirty'
-                        ] ||
-                          f['primaryDetails']['controls']['leadActivity'][
-                            'touched'
-                          ])
-                    }"
-                  >
-                  </p-dropdown> -->
                   <div
                     *ngIf="
                       f['primaryDetails']['controls']['leadActivity'][
@@ -936,7 +908,7 @@
                     class="form-text text-danger"
                     [ngClass]="{
                       'is-invalid':
-                        ['submitted'] &&
+                        submitted &&
                         f['contactDetails']['controls']['countryCodeTel']
                           ?.errors
                     }"
@@ -1050,7 +1022,7 @@
                     class="form-text text-danger"
                     [ngClass]="{
                       'is-invalid':
-                        ['submitted'] &&
+                        submitted &&
                         f['contactDetails']['controls']['countryCodeTel']
                           ?.errors
                     }"
@@ -1149,7 +1121,7 @@
                     "entities.website" | translate
                   }}</label>
                   <input
-                    type="email"
+                    type="text"
                     class="form-control"
                     id="website"
                     placeholder="www.turnkeyafrica.com"
@@ -2224,8 +2196,7 @@
                     "
                     class="form-text text-danger"
                     [ngClass]="{
-                      'is-invalid':
-                        ['submitted'] && f['potentialCloseDate']?.errors
+                      'is-invalid': submitted && f['potentialCloseDate']?.errors
                     }"
                   >
                     <div
@@ -2402,7 +2373,7 @@
                 "
                 class="form-text text-danger"
                 [ngClass]="{
-                  'is-invalid': ['submitted'] && f['comment']?.errors
+                  'is-invalid': submitted && f['comment']?.errors
                 }"
               >
                 <div *ngIf="f['comment']?.errors['required']">
@@ -2435,7 +2406,7 @@
                 "
                 class="form-text text-danger"
                 [ngClass]="{
-                  'is-invalid': ['submitted'] && f['date']?.errors
+                  'is-invalid': submitted && f['date']?.errors
                 }"
               >
                 <div *ngIf="f['date']?.errors['required']">
@@ -2467,7 +2438,7 @@
                 "
                 class="form-text text-danger"
                 [ngClass]="{
-                  'is-invalid': ['submitted'] && f['disposition']?.errors
+                  'is-invalid': submitted && f['disposition']?.errors
                 }"
               >
                 <div *ngIf="f['disposition']?.errors['required']">
